--- a/requirements.txt
+++ b/requirements.txt
@@ -93,7 +93,7 @@ python-dateutil==2.8.2
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
 PyWavelets==1.4.1
-pywin32==227;platform_system == "Windows"
+pywin32==228
 PyYAML==6.0
 pyzmq==25.0.2
 requests==2.28.2
